Fix .dashboard__wrapper class overflow

--- a/src/styles/components/_settings.scss
+++ b/src/styles/components/_settings.scss
@@ -146,7 +146,7 @@
     gap: 24px;
     width: 100%;
     height: 100%;
-    padding: 24px 0 0 24px;
+    padding: 24px 24px 0 24px;
   }
 
   &__profile {
@@ -235,7 +235,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 910px;
+    // width: 910px;
     gap: 24px;
 
     & > section {
